fixed image file

--- a/Individual_Contributors/us_disasters.ipynb
+++ b/Individual_Contributors/us_disasters.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4                              NaN                   30000.0  81.101659  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "Name: Disaster Subtype, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "3343                              NaN                    2000.0  92.708822  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "3291                              NaN                 2700000.0  92.708822  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "2209                              NaN                  200000.0  87.984603  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "4396                16500000.0  98.219991  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "844                              NaN                 7000000.0  84.215229  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "4306                              NaN                95000000.0  95.878166  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
        "3291                              NaN                 2700000.0  92.708822  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
        "4  Weather Extremes  believer    male  not aggressive  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
        "4  Weather Extremes  believer    male  not aggressive  2018-12-16  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,18 +1647,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jrmor\\AppData\\Local\\Temp\\ipykernel_19532\\2123367906.py:2: FutureWarning: Comparison of Timestamp with datetime.date is deprecated in order to match the standard library behavior. In a future version these will be considered non-comparable. Use 'ts == pd.Timestamp(date)' or 'ts.date() == date' instead.\n",
+      "C:\\Users\\jrmor\\AppData\\Local\\Temp\\ipykernel_9252\\2123367906.py:2: FutureWarning: Comparison of Timestamp with datetime.date is deprecated in order to match the standard library behavior. In a future version these will be considered non-comparable. Use 'ts == pd.Timestamp(date)' or 'ts.date() == date' instead.\n",
       "  cyclone_tweets = df2.loc[(df2[\"date\"] >= startdate[0]) & (df2[\"date\"] <= enddate[0]), :]\n",
-      "C:\\Users\\jrmor\\AppData\\Local\\Temp\\ipykernel_19532\\2123367906.py:3: FutureWarning: Comparison of Timestamp with datetime.date is deprecated in order to match the standard library behavior. In a future version these will be considered non-comparable. Use 'ts == pd.Timestamp(date)' or 'ts.date() == date' instead.\n",
+      "C:\\Users\\jrmor\\AppData\\Local\\Temp\\ipykernel_9252\\2123367906.py:3: FutureWarning: Comparison of Timestamp with datetime.date is deprecated in order to match the standard library behavior. In a future version these will be considered non-comparable. Use 'ts == pd.Timestamp(date)' or 'ts.date() == date' instead.\n",
       "  wildfire_tweets = df2.loc[(df2[\"date\"] >= startdate[1]) & (df2[\"date\"] <= enddate[1]), :]\n",
-      "C:\\Users\\jrmor\\AppData\\Local\\Temp\\ipykernel_19532\\2123367906.py:4: FutureWarning: Comparison of Timestamp with datetime.date is deprecated in order to match the standard library behavior. In a future version these will be considered non-comparable. Use 'ts == pd.Timestamp(date)' or 'ts.date() == date' instead.\n",
+      "C:\\Users\\jrmor\\AppData\\Local\\Temp\\ipykernel_9252\\2123367906.py:4: FutureWarning: Comparison of Timestamp with datetime.date is deprecated in order to match the standard library behavior. In a future version these will be considered non-comparable. Use 'ts == pd.Timestamp(date)' or 'ts.date() == date' instead.\n",
       "  flood_tweets = df2.loc[(df2[\"date\"] >= startdate[2]) & (df2[\"date\"] <= enddate[2]), :]\n"
      ]
     }
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
        "1219  not aggressive  2017-09-12  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1821,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1957,7 @@
        "320  2018-11-29  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2099,7 @@
        "608          Politics   neutral    male  not aggressive  2015-05-28  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2120,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2249,7 @@
        "6053  Weather Extremes    denier       male      aggressive  2017-08-25  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2263,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2392,7 @@
        "2205  Weather Extremes  believer    male      aggressive  2018-11-28  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2535,7 @@
        "3275  Weather Extremes  believer    male  not aggressive  2015-06-11  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2589,13 +2589,13 @@
     "plt.text(17.5, 150, 'Hurricane Harvey Ends', color='purple', rotation=90)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../Images/Q3Hurricane.png')\n",
+    "plt.savefig('../Images/Q3Hurricane.png', transparent = False, facecolor= \"white\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2627,13 +2627,13 @@
     "plt.text(.63, 1100, 'CA Wildfire Ends', color='purple', rotation=90)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../Images/Q3Wildfire.png')\n",
+    "plt.savefig('../Images/Q3Wildfire.png', transparent = False, facecolor= \"white\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
     "plt.text(20.25, 300, 'Wimberley Flood Ends', color='purple', rotation=90)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../Images/Q3Flood.png')\n",
+    "plt.savefig('../Images/Q3Flood.png', transparent = False, facecolor= \"white\")\n",
     "plt.show()"
    ]
   },
@@ -2689,7 +2689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2708,7 +2708,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8ca3c2b93fec3a68989a8a35ad4ad37f554c7436255229aa8dbd97e50d16e03f"
+    "hash": "d14a510d51caefdde50c63486ea6b11cf9be01c11d39bc028ec4529ce17ce79f"
    }
   }
  },
